--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -1,15 +1,57 @@
-<form #registerForm="ngForm" (ngSubmit)="register()">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
   <h2 class="text-center text-primary">Sign Up</h2>
   <hr>
 
   <div class="form-group">
-    <input type="text" placeholder="Username" class="form-control"
-      name="username" [(ngModel)]="model.username">
+    <input type="text" placeholder="Username" 
+      [ngClass]="{'is-invalid': registerForm.get('username').errors
+      && registerForm.get('username').touched}"
+      class="form-control"
+      formControlName="username" >
+    <div class="invalid-feedback">Please choose a username</div>
   </div>
 
   <div class="form-group">
-    <input type="password" placeholder="Password" class="form-control"
-      name="password" [(ngModel)]="model.password">
+    <input type="password" placeholder="Password" 
+      [ngClass]="{'is-invalid': registerForm.get('password').errors
+      && registerForm.get('password').touched}"
+      class="form-control"
+      formControlName="password">
+    <div class="invalid-feedback" 
+      *ngIf="registerForm.get('password').hasError('required')
+          && registerForm.get('password').touched">
+          Password is required
+    </div>
+    <div class="invalid-feedback" 
+      *ngIf="registerForm.get('password').hasError('minlength')
+          && registerForm.get('password').touched">
+          Password must be at least 4 characters
+    </div>
+    <div class="invalid-feedback" 
+      *ngIf="registerForm.get('password').hasError('maxlength')
+          && registerForm.get('password').touched">
+          Password cannot exceed 8 characters
+    </div>
+  </div>
+
+  <div class="form-group">
+    <input type="password" placeholder="Confirm Password" 
+      [ngClass]="{'is-invalid': registerForm.get('confirmPassword').errors
+      && registerForm.get('confirmPassword').touched
+      || registerForm.get('confirmPassword').touched
+      && registerForm.hasError('mismatch')}"
+      class="form-control"
+      formControlName="confirmPassword">
+    <div class="invalid-feedback" 
+      *ngIf="registerForm.get('confirmPassword').hasError('required')
+          && registerForm.get('confirmPassword').touched">
+          Password is required
+    </div>
+    <div class="invalid-feedback" 
+      *ngIf="registerForm.hasError('mismatch')
+          && registerForm.get('confirmPassword').touched">
+          Password must match
+    </div>
   </div>
 
   <div class="form-group text-center">
@@ -17,3 +59,6 @@
     <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
   </div>
 </form>
+
+<p>Form value: {{ registerForm.value | json }}</p>
+<p>Form status: {{ registerForm.status | json }}</p>
